# wasm_engine

./: .gitignore  CLAUDE.md  README.md  package.json
.github/workflows/: deploy.yml
crates/engine-core/: Cargo.toml
crates/engine-core/src/: lib.rs
crates/engine-core/src/components/: mod.rs  name.rs  transform.rs
crates/engine-core/src/ecs/: component.rs  entity.rs  mod.rs  query.rs  storage.rs  world.rs
crates/engine-core/src/math/: mod.rs
crates/engine-renderer/: Cargo.toml
crates/engine-renderer/src/: camera.rs  gizmo.rs  lib.rs  mesh.rs  picking.rs
crates/engine-wasm/: Cargo.toml
crates/engine-wasm/src/: lib.rs  subscription.rs  utils.rs
crates/engine-wasm/src/renderer/: depth.rs  gizmo_pipeline.rs  gpu_context.rs  mod.rs  scene_pipeline.rs
crates/engine-wasm/src/shaders/: gizmo.wgsl  main.wgsl  mod.rs
editor/: package.json  pnpm-lock.yaml  vite.config.ts
editor/src/: App.tsx  index.css
editor/src/components/hierarchy/: HierarchyItem.tsx  SceneHierarchy.tsx  index.ts
editor/src/components/inspector/: Inspector.tsx  PropertyField.tsx  TransformEditor.tsx  index.ts
editor/src/components/layout/: EditorLayout.tsx  Panel.tsx  Toolbar.tsx  index.ts
editor/src/components/viewport/: Viewport.tsx  index.ts  useGizmo.ts  useGizmoInteraction.ts  useViewportControls.ts
editor/src/engine/: EngineAPI.ts  context.ts  hooks.ts  index.ts  query.ts  types.ts
editor/src/stores/: editorStore.ts  index.ts
editor/src/styles/: editor.css
