[package]
name = "engine-renderer"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu = { version = "27", features = ["webgl"] }
bytemuck = { version = "1.14", features = ["derive"] }
glam = "0.29"
engine-core = { path = "../engine-core" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
] }
