[package]
name = "engine-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_error_panic_hook = "0.1"
wgpu = { version = "27", features = ["webgl", "webgpu"] }
bytemuck = { version = "1.14", features = ["derive"] }
glam = "0.30.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
engine-core = { path = "../engine-core" }
engine-renderer = { path = "../engine-renderer" }

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "OffscreenCanvas",
    "console",
]
